--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 
 # We're using a Pico by default on this template
 rp-pico = "0.7"
+pio-proc = "0.2"
+pio = "0.2"
+libm = "0.2.6"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.6"
