--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rp-pico = "0.7"
 pio-proc = "0.2"
 pio = "0.2"
 libm = "0.2.6"
+micromath = "2.0.0"
 
 # but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
 # sparkfun-pro-micro-rp2040 = "0.6"
